--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>FirstLivewebPage</title>
+    <title>Assignment2</title>
 </head>
-<body style="background-color: blue;"> 
-    <h1>Welcome everyone</h1>
+<body style="background-color:aqua;"> 
+    <h1 style="color: black;">Welcome everyone</h1>
     <h2>hello world </h2>
     <p style="background-color: cornsilk;"> A "Hello, World!" program generally is a computer program that outputs or displays the message "Hello, World!". Such a program is very simple in most programming languages, and is often used to illustrate the basic syntax of a programming language. It is often the first program written by people learning to code.[1][2] It can also be used as a sanity test to make sure that a computer language is correctly installed, and that the operator understands how to use it.
 
