--- a/practicals/practical4.html
+++ b/practicals/practical4.html
@@ -1,13 +1,14 @@
-  
 <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Practicals</title>
-    <link rel="stylesheet" href="css/index.css">
+    <link rel="stylesheet" href="../css/index.css">
   </head>
   <body>
+    <h3>Practical-4: Create a website having list of all practical and their individual practical Page links .</h3>
+    <h2>Output</h2>
     <h1>Welcome to Fullstack Course</h1>
     <h2>About Course</h2>
     <p>
@@ -24,26 +25,27 @@
       <li>
         Create a Web page including HTML basic skeleton using Offline HTML
         Editor and Online Sandbox Environment
-        <a href="../personalwebpage/practicals/practical1.html">Practical-1</a>
+        <a href="../practicals/practical1.html">Practical-1</a>
       </li>
 
       <br />
       <li>
         Live your First Web-Page on Git-Hub
-        <a href="../personalwebpage/practicals/practical2.html">Practical-2</a>
+        <a href="../practicals/practical2.html">Practical-2</a>
       </li>
       <br />
       <li>
         Create a web page showing a basic html structure using character
         Entities and span Tag.
-        <a href="../personalwebpage/practicals/practical3.html">Practical-3</a>
+        <a href="../practicals/practical3.html">Practical-3</a>
       </li>
       <br />
       <li>
-        Create a website having list of all practical and their individual
-        practical Page links .
-        <a href='../personalwebpage/practicals/practical4.html'>Practical-4</a>
-      </li>
+        Create a website having list of all  practical and their individual practical Page
+        links. 
+        <a href="../practicals/practical4.html">Practical-4</a>
+          </li>
+          <br/>
     </ol>
   </body>
 </html>
