--- a/index.html
+++ b/index.html
@@ -44,6 +44,11 @@
         practical Page links .
         <a href='../personalwebpage/practicals/practical4.html'>Practical-4</a>
       </li>
+      <br />
+      <li>
+        Create a Web-Page showing the use of Image-Map in the Web Application.
+        <a href='../personalwebpage/practicals/practical5.html'>Practical-5</a>
+      </li>
     </ol>
   </body>
 </html>
