--- a/practicals/practical5.html
+++ b/practicals/practical5.html
@@ -15,6 +15,12 @@
         margin-left: 50px;
         margin-right: 10px;
       }
+      .center {
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+        width: 50%;
+        }
       h1 {
         text-align: center;
         color: honeydew;
@@ -33,8 +39,7 @@
   </head>
   <body>
     <div class="title-bar">
-      <img src="../images/Untitlednew.png" usemap="#image-map" />
-
+      <img src="../images/Untitlednew.png" alt="paris" class="center" usemap="#image-map" />
       <map name="image-map">
         <area
           target=""
