--- a/practicals/practical4.html
+++ b/practicals/practical4.html
@@ -46,6 +46,10 @@
         <a href="#">Practical-4</a>
           </li>
           <br/>
+      <li>
+        Create a Web-Page showing the use of Image-Map in the Web Application.
+        <a href='../practicals/practical5.html'>Practical-5</a>
+      </li>
     </ol>
   </body>
 </html>
