--- a/practicals/practical-5bootstrapintro.html
+++ b/practicals/practical-5bootstrapintro.html
@@ -7,7 +7,7 @@
     <style>
       body {
         margin: 20px;
-        background-color: rgb(236, 197, 197);
+        background-color: rgb(49, 111, 151);
       }
       .heading {
         text-align: center;
@@ -26,7 +26,7 @@
   </head>
   <body>
     <div class="heading">
-      <img src="../images/bootstrap-illustration.png" alt="" width="1400px" />
+      <img src="../images/bootstrap-illustration.png" alt="" width="50%" height="auto" />
     </div>
     <div class="intro">
       <p>
