--- a/practicals/practical-5cssintro.html
+++ b/practicals/practical-5cssintro.html
@@ -8,7 +8,7 @@
     <style>
       body {
         margin: 20px;
-        background-color: rgb(236, 197, 197);
+        background-color: rgb(83, 149, 204);
       }
       .heading {
         text-align: center;
@@ -18,7 +18,7 @@
         height: auto;
       }
       p {
-        background-color: rgb(94, 91, 91);
+        background-color: rgb(91, 92, 94);
         color: honeydew;
         line-height: 20px;
         font-size: larger;
@@ -27,7 +27,7 @@
   </head>
   <body>
     <div class="heading">
-      <img src="../images/css-introduction.jpg" alt="" width="1400px" />
+      <img src="../images/css-introduction.jpg" alt="" width="50%" height="auto" />
     </div>
     <div class="intro">
       <p>
