--- a/practicals/practical5.html
+++ b/practicals/practical5.html
@@ -7,7 +7,7 @@
     <style>
       body {
         margin: 20px;
-        background-color: rgb(236, 197, 197);
+        background-color: rgb(124, 205, 243);
       }
       .title-bar {
         width: 80%;
@@ -26,7 +26,7 @@
         color: honeydew;
       }
       .main-img {
-        margin-left: 550px;
+        margin-left: 535px;
       }
       h3 {
         text-align: center;
@@ -85,7 +85,7 @@
           target=""
           alt=""
           title=""
-          href="../practicals/practical5.html"
+          href="#"
           coords="1067,11,1282,62"
           shape="rect"
         />
