--- a/practicals/practicl-5jsintro.html
+++ b/practicals/practicl-5jsintro.html
@@ -7,7 +7,7 @@
     <style>
       body {
         margin: 20px;
-        background-color: rgb(236, 197, 197);
+        background-color: rgb(37, 133, 139);
       }
       .heading {
         text-align: center;
@@ -26,7 +26,7 @@
   </head>
   <body>
     <div class="heading">
-      <img src="../images/introtojs.png" alt="" width="1400px" height='500px' />
+      <img src="../images/introtojs.png" alt="" width="50%" height='auto' />
     </div>
     <div class="intro">
       <p>
