--- a/practicals/practical5.html
+++ b/practicals/practical5.html
@@ -38,8 +38,8 @@
     </style>
   </head>
   <body>
-    <div class="title-bar">
-      <img src="../images/Untitlednew.png" alt="paris" class="center" usemap="#image-map" />
+    <div class="center">
+      <img src="../images/Untitlednew.png" alt="paris" usemap="#image-map" />
       <map name="image-map">
         <area
           target=""
