--- a/practicals/practical5.html
+++ b/practicals/practical5.html
@@ -11,9 +11,9 @@
       }
       .center {
         display: block;
-        margin-left: 75px;
-        margin-right: 10px;
-        width: 110%;
+        margin-left: auto;
+        margin-right: auto;
+        width: 90%;
         }
       h1 {
         text-align: center;
@@ -128,7 +128,7 @@
       </map>
     </div>
     <div>
-      <h3>Click on any part of logo to know more about these technologies...</h3>
+      <h3>Click on any part of logo to know more about these technologies....</h3>
     </div>
   </body>
 </html>
