--- a/practicals/practical5.html
+++ b/practicals/practical5.html
@@ -13,7 +13,7 @@
         display: block;
         margin-left: auto;
         margin-right: auto;
-        width: 90%;
+        width: 80%;
         }
       h1 {
         text-align: center;
@@ -128,7 +128,7 @@
       </map>
     </div>
     <div>
-      <h3>Click on any part of logo to know more about these technologies....</h3>
+      <h3>Click on any part of logo to know more about these technologies..</h3>
     </div>
   </body>
 </html>
