--- a/practicals/practical5.html
+++ b/practicals/practical5.html
@@ -6,21 +6,20 @@
     <title>Practical-5</title>
     <style>
       body {
-        margin: 20px;
         background-color: rgb(82, 173, 128);
       }
       .center {
         display: block;
-        margin-left: auto;
+        margin-left: 70px;
         margin-right: auto;
-        width: 80%;
         }
       h1 {
         text-align: center;
         color: honeydew;
       }
       .main-img {
-        margin-left: 532px;
+        margin-left: 500px;
+        
       }
       h3 {
         text-align: center;
@@ -128,7 +127,7 @@
       </map>
     </div>
     <div>
-      <h3>Click on any part of logo to know more about these technologies..</h3>
+      <h3>Click on any part of logo to know more about these technologies</h3>
     </div>
   </body>
 </html>
