--- a/practicals/practical5.html
+++ b/practicals/practical5.html
@@ -10,7 +10,7 @@
       }
       .center {
         display: block;
-        margin-left: 70px;
+        margin-left: 60px;
         margin-right: auto;
         }
       h1 {
@@ -127,7 +127,7 @@
       </map>
     </div>
     <div>
-      <h3>Click on any part of logo to know more about these technologies</h3>
+      <h3>Click on any part of logo to know more about these technologies..</h3>
     </div>
   </body>
 </html>
