--- a/index.html
+++ b/index.html
@@ -49,6 +49,11 @@
         Create a Web-Page showing the use of Image-Map in the Web Application.
         <a href='../personalwebpage/practicals/practical5.html'>Practical-5</a>
       </li>
+    </br>
+      <li>
+        Create following layout using CSS Layout properties.
+        <a href="../personalwebpage/practicals/practical6.html">Practical-6</a>
+    </li>
     </ol>
   </body>
 </html>
