--- a/index.html
+++ b/index.html
@@ -54,6 +54,11 @@
         Create following layout using CSS Layout properties.
         <a href="../personalwebpage/practicals/practical6.html">Practical-6</a>
     </li>
+  </br>
+  <li>
+    Create a Web Page Layout using div tags.
+    <a href="../personalwebpage/practicals/practical7.html">Practical-7</a>
+  </li>
     </ol>
   </body>
 </html>
