--- a/practicals/practical5.html
+++ b/practicals/practical5.html
@@ -10,7 +10,7 @@
       }
       .center {
         display: block;
-        margin-left: 30px;
+        margin-left: 40px;
         margin-right: auto;
         }
       h1 {
@@ -18,7 +18,7 @@
         color: honeydew;
       }
       .main-img {
-        margin-left: 485px;
+        margin-left: 600px;
         
       }
       h3 {
@@ -127,7 +127,7 @@
       </map>
     </div>
     <div>
-      <h3>Click on any part of logo to know more about these technologies..</h3>
+      <h3>Click on any part of logo to know more about these technologies....</h3>
     </div>
   </body>
 </html>
