--- a/index.html
+++ b/index.html
@@ -59,6 +59,11 @@
     Create a Web Page Layout using div tags.
     <a href="../personalwebpage/practicals/practical7.html">Practical-7</a>
   </li>
+</br>
+<li>
+  Create a Web Page having Fixed Navigation Bar with the given content.
+  <a href="../personalwebpage/practicals/practical8.html">Practical-7</a>
+</li>
     </ol>
   </body>
 </html>
