--- a/practicals/practical8.html
+++ b/practicals/practical8.html
@@ -302,7 +302,7 @@
                 <p>
                     CSS is short for Cascading Style Sheets, and is the preferred way for setting the look and feel of a website.
                     Cascading Style Sheets (CSS) is a markup language responsible for how your web pages will look like. It
-                    controls the colors, fonts, and layouts of your website elements.
+                    controls the colors, fonts, 
                 </p>
     
                 <a href="../practicals/practical-5cssintro.html">
