--- a/practicals/practical9.html
+++ b/practicals/practical9.html
@@ -16,6 +16,8 @@
     width: 100%;
     height: 70px;
     background-color: grey;
+    display: flex;
+    justify-content: center;
     padding: 0 10px;
 }
 
@@ -240,6 +242,8 @@ p
         text-align: center;
         padding: 80px 0;
         transition: .6s;
+        display: flex;
+        justify-content: center;
         line-height: normal;
     }
 
