--- a/index.html
+++ b/index.html
@@ -64,6 +64,12 @@
   Create a Web Page having Fixed Navigation Bar with the given content.
   <a href="../personalwebpage/practicals/practical8.html">Practical-8</a>
 </li>
+</br>
+<li>
+  Create a Responsive Web Layout with Responsive Navigation Bar.
+  <a href="../personalwebpage/practicals/practical9.html">Practical-9</a>
+</li>
+</br>
     </ol>
   </body>
 </html>
