--- a/practicals/practical10.html
+++ b/practicals/practical10.html
@@ -3,42 +3,177 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="../CSS/practical10.css">
+    <title>Practical 10</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
     <style>
-        
+        * {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+.header {
+    width: 100%;
+    height: 70px;
+    position: fixed;
+    background-color: #2f3640;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    
+}
+
+.header img {
+    width: 70px;
+    height: 70px;
+    margin-right: 15px;
+}
+
+.header h1 {
+    line-height: 70px;
+    color: white;
+}
+
+.content {
+    width: 100%;
+    padding: 20px;
+    transition: 0.7s;
+}
+
+.content img {
+    width: 100%;
+    max-width: 700px;
+    display: block;
+    margin: 70px auto 30px auto;
+}
+
+.content p {
+    text-align: justify;
+}
+
+.sidebar {
+    width: 20%;
+    height: 100%;
+    position: fixed;
+    top: 70px;
+    background-color: #353b48;
+    left: -100%;
+    transition: 0.7s;
+}
+
+.sidebar ul {
+    list-style: none;
+}
+
+.sidebar ul li {
+    border-bottom: 2px solid rgba(255, 255, 255,0.1);
+
+}
+
+.sidebar ul li a  {
+    display: block;
+    text-decoration: none;
+    color: white;
+    font-size: 20px;
+    padding: 15px 25px;
+    transition: .4s;
+
+}
+.sidebar ul li a span {
+    margin-left: 20px;
+}
+
+.sidebar ul li a:hover {
+    border-left:  10px solid white;
+}
+
+.social {
+    margin-top: 200px;  
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    font-size: 30px;
+    border-top: 2px solid rgba(255, 255, 255, 0.1);
+    border-bottom: 2px solid rgba(255, 255, 255, 0.1);
+    padding: 15px 25px;
+}
+i {
+    font-size: 30px;
+    color: white;
+
+}
+
+.show-btn, .hide-btn {
+    font-size: 35px;
+    color: white;
+    position: fixed;
+    top:20px;
+    left: 50px;
+}
+.hide-btn {
+    opacity: 0;
+}
+
+#chk:checked ~ .sidebar {   
+    left: 0;
+}
+
+#chk:checked ~ .show-btn{
+    opacity: 0;
+}
+#chk:checked ~ .hide-btn{  
+    opacity: 1;
+}
+#chk:checked ~ .content{
+    width: 80%;
+    margin-left: 20%;     
+
+}
+
+@media(max-width:768px) {
+    .sidebar {
+        width: 100%;
+        text-align: center;
+    }
+    .header h1 {
+        display: none;
+    }
+}
+
     </style>
 </head>
 <body>
     <div class="header">
-<img src="../images/fullstack.png" alt="">
-<h1>FullStack</h1>
+        <img src="../images/full-stack-developer-icon.png" alt="image">
+        <h1>FULLSTACK</h1>
     </div>
-    <input type="checkbox" name="" id="check">
-    <label for="check"class="showbutton">
+    <input type="checkbox" name="" id="chk">
+    <label for="chk" class="show-btn">
         <i class="fa fa-bars"></i>
     </label>
-    <label for="check"class="hidebutton">
+    <label for="chk" class="hide-btn">
         <i class="fa fa-times"></i>
     </label>
+    <div class="content">
+        <img src="../images/mainimage.jpg" alt="">
+        <p>
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. In facere beatae recusandae voluptatibus. Deserunt, tempore! Veniam reiciendis eaque, voluptatum asperiores cum officia iure beatae hic ad cupiditate nisi sint sunt iusto repellendus blanditiis quisquam ratione aperiam officiis optio, amet pariatur. Modi itaque voluptatum consequatur praesentium illum autem quod adipisci libero? Iste accusamus, magni molestiae quaerat suscipit eos voluptas dolores exercitationem ducimus facere fuga eius quasi sapiente labore velit ut laborum numquam aspernatur alias maxime. Consequatur in voluptas atque fugiat sit sunt ullam voluptates, maiores, dolores delectus quaerat autem vero tempore aliquam provident animi perferendis eligendi consectetur possimus ratione harum ad nobis dolorum. Dolore qui id pariatur aliquam praesentium dolorem voluptates earum error cupiditate molestias hic accusantium eveniet, exercitationem voluptatem amet corrupti placeat rem eum laborum fugiat veniam accusamus! Harum perspiciatis nihil ad, fugiat corrupti quasi et consequuntur non, asperiores nisi, inventore quis tempora assumenda cum? Accusantium atque numquam obcaecati, eligendi quaerat quae suscipit reprehenderit quo illo consectetur iste consequatur quibusdam doloremque quis laudantium provident voluptatibus quos incidunt expedita. Nihil quaerat veniam, facere perspiciatis nam voluptate at ullam adipisci! Obcaecati unde eius ipsum temporibus similique in aperiam. Sunt, a repellat porro quis molestiae nihil sint provident perferendis ut eos inventore ex quisquam dolorem facilis doloribus ipsam accusamus excepturi? Non aperiam, delectus mollitia quae ab quod quo unde nam deleniti excepturi eos cumque aliquid ducimus optio, natus voluptatum perspiciatis illum asperiores dicta reprehenderit odit! Saepe incidunt, commodi sequi eligendi modi deleniti quibusdam in atque perspiciatis optio enim consequuntur distinctio voluptates. Vitae tempore quae corporis placeat fugiat, consectetur accusantium voluptatum, voluptatibus in velit, reprehenderit rem earum quidem. Quidem non perspiciatis tempore magni quis, itaque nulla quo labore nemo quia alias odit, doloremque quod voluptatum provident dicta consectetur aut rerum deleniti, iusto eum laborum dolores! Blanditiis ratione quos ab veritatis! Ducimus, omnis neque. Culpa aspernatur optio minima! Cumque enim atque odit libero dolorum sit ab labore est, amet ipsum! Illum libero cupiditate ad ducimus sit animi nostrum dolores reiciendis perferendis rem quae repudiandae tenetur quo itaque eos doloribus, tempore amet! Distinctio illo facilis eaque labore minus obcaecati. Veritatis autem quod, modi ipsa sit adipisci, voluptatem consequatur maxime ut provident, minus culpa rerum quisquam unde. Totam dolores vero at necessitatibus mollitia, fugit placeat eos unde possimus blanditiis in quam provident, harum porro ratione. Totam, nobis repudiandae. Accusamus non ducimus quidem deserunt obcaecati corporis maiores assumenda repellendus, magni vel consequatur error itaque dolores nesciunt quo blanditiis voluptates maxime rem aspernatur dolorum soluta delectus id! Praesentium aperiam cupiditate voluptatum autem esse exercitationem ab maiores facilis mollitia omnis aliquam quas cum, ratione nostrum quidem! Asperiores sit fugit mollitia ratione nulla perferendis excepturi deleniti, natus neque consectetur nostrum sed cupiditate labore modi eaque sunt adipisci ducimus debitis assumenda voluptatem. Debitis consectetur distinctio asperiores numquam. Laborum tempora ipsa dolore culpa, laboriosam sit, vel ut eaque molestiae quasi ducimus mollitia vitae minima. Rem, libero magni dolorem dicta cupiditate excepturi eum quaerat veritatis illum asperiores unde fugiat, accusantium deleniti commodi? Doloribus, maiores. Sequi, reiciendis. Dolorum quis magni eum facilis consequatur recusandae laboriosam.
+        </p>
+    </div>
     <div class="sidebar">
         <ul>
-            <li><a href="#"><i class="fa fa-home"></i> Home</a></li>
-            <li><a href="#"><i class="fa fa-user"></i>About</a></li>
-            <li><a href="#"><i class="fa fa-server"></i>Services</a></li>
-            <li><a href="#"><i class="fa fa-rss"></i>Blog</a></li>
-            <li><a href="#"><i class="fa fa-id-card"></i>Contact</a></li>
+            <li><a href="#"><i class="fa fa-home"><span>Home</span></i></a></li>
+            <li><a href="#"><i class="fa fa-user"><span>About</span></i></a></li>
+            <li><a href="#"><i class="fa fa-tasks"><span>Services</span></i></a></li>
+            <li><a href="#"><i class="fa fa-rss"><span>Blog</span></i></a></li>
+            <li><a href="#"><i class="fa fa-id-card"><span>Contact</span></i></a></li>
         </ul>
         <div class="social">
-        <a href=""><i class="fa fa-facebook-square"></i></a>
-        <a href=""><i class="fa fa-github"></i></a>
-        <a href=""><i class="fa fa-linkedin"></i></a>
+            <a href="#"><i class="fa fa-facebook-square"></i></a>
+            <a href="#"><i class="fa fa-youtube-square"></i></a>
+            <a href="#"><i class="fa fa-instagram"></i></a>
         </div>
-    </div>
-    <div class="content">
-        <img src="../images/banner.jpg" alt="">
-        <p> Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quo nulla autem cupiditate temporibus recusandae ullam odit soluta eaque ipsum. Alias fuga voluptate ea deleniti dolores! Soluta voluptatem impedit doloremque, earum laudantium accusantium nam labore ea asperiores illum veritatis libero natus animi quas autem temporibus quasi cumque reprehenderit obcaecati sequi inventore! Ea velit mollitia recusandae cum ad impedit fugit, illo, necessitatibus, laudantium officiis commodi voluptas doloribus aliquid porro iusto alias minus suscipit quod ratione facere maxime eum obcaecati distinctio ipsam. Facilis iure amet pariatur, beatae ex debitis neque similique consectetur placeat ipsum in incidunt officiis a? Totam hic minima sed. Repellat reprehenderit ratione ab dolor, molestias at voluptatibus. Eius dolorem aut labore nisi culpa totam aspernatur ducimus repudiandae ad reprehenderit deleniti a ut est fuga placeat ratione, architecto provident suscipit quam magni? Porro vitae quibusdam consectetur reprehenderit culpa laborum doloremque provident voluptatibus, nostrum maiores error rerum rem eum enim consequuntur? Modi quos temporibus deserunt? Reprehenderit amet dicta natus nisi mollitia saepe accusantium provident quod necessitatibus! Exercitationem sunt nam dignissimos, illum commodi architecto harum eos corporis doloribus ipsam, officiis natus nobis et quo. Distinctio natus consequatur quia recusandae corrupti. Mollitia veniam nihil reiciendis consectetur repellat dicta quibusdam minus repellendus explicabo assumenda cumque sapiente natus quaerat sint repudiandae veritatis doloribus magni, consequuntur ratione, quae numquam autem omnis ex. Dolore, dolorum reprehenderit excepturi vel quis cumque numquam quidem dicta odio debitis consequatur ipsa voluptatum sunt explicabo quae rem voluptatem, non, id quod similique officia! Minima et assumenda, natus expedita nesciunt impedit fugit facere, quisquam incidunt, beatae eveniet vel quasi! Ea quam adipisci sunt soluta alias blanditiis. Distinctio ut voluptas repudiandae accusantium itaque? In, illo inventore. Nisi vitae suscipit doloribus consequatur omnis quas deserunt incidunt! Nobis vitae mollitia ad illum delectus tempore debitis, quis dolor eum illo facilis perspiciatis nam, aliquam, tempora reprehenderit animi sed? Tenetur nisi quis, est, cum aperiam provident, minus nihil eligendi possimus nesciunt obcaecati corporis architecto recusandae aut. Odit numquam non architecto ullam incidunt iusto a inventore, quia voluptate eveniet commodi qui dolorum sint tenetur est placeat ipsam eaque voluptatum. A blanditiis, tenetur consequatur quaerat doloribus dolores mollitia illum necessitatibus est libero eum, ipsum sunt nihil optio commodi possimus atque molestiae id. Pariatur, iusto eum blanditiis rem ipsum deleniti sunt facilis similique nemo eveniet laboriosam molestias! Tempore sequi atque soluta culpa porro aperiam nihil, repellendus assumenda ipsum enim aut quam? Animi quae est in, velit nostrum vitae ut qui. Vel iusto pariatur quasi maxime ducimus repellat animi odio. Dolore reprehenderit dolor saepe nulla maxime exercitationem. Ullam, porro iusto vitae, magnam quisquam dolores nemo tempora optio sequi nisi nobis hic dolor quis? Soluta aliquam assumenda ut nesciunt sit neque similique amet hic reiciendis magnam. At eligendi totam amet deserunt aliquid, repellendus odit nesciunt saepe necessitatibus labore itaque quas sequi obcaecati eius libero ullam suscipit tempora explicabo nulla maxime quia quis similique. Ut neque quis, delectus laboriosam impedit totam doloremque quas fugit quos quisquam, possimus dolores qui voluptatibus necessitatibus architecto tempora repellat debitis deleniti assumenda nam suscipit, animi perferendis commodi reiciendis. Reiciendis sequi iure eligendi numquam veniam illum cum accusantium doloremque enim, velit tenetur? Tempore maxime natus reprehenderit porro quam hic! Velit, obcaecati tempore non error culpa reprehenderit inventore beatae provident corporis voluptatum ex sapiente, earum assumenda molestiae illo sunt est blanditiis voluptas unde laudantium, nihil itaque debitis. Doloribus placeat reprehenderit magnam reiciendis, veniam corrupti quidem alias voluptatum veritatis impedit similique rerum! Ut inventore modi optio incidunt provident voluptates nemo temporibus assumenda illo reiciendis excepturi numquam voluptate asperiores consequatur soluta cumque, quisquam doloribus fugiat facere ipsam! Doloremque eum alias, aliquam corporis tempora perspiciatis quia eos iusto culpa officia voluptate natus facere illum pariatur adipisci, aspernatur animi aliquid. Nam optio voluptatibus repellat nulla ad, explicabo doloremque sunt nesciunt ullam tenetur sapiente fuga molestias quos velit facilis dolore. Iste ut, consequatur dolor odit numquam molestiae maxime repudiandae similique amet blanditiis perspiciatis odio alias temporibus rem quisquam distinctio est dolores consectetur at enim nisi saepe natus. Ad blanditiis nam soluta sit, sunt nisi aliquid ab non expedita unde iste pariatur qui reiciendis nesciunt asperiores culpa. Quos quae unde, aliquam, inventore expedita necessitatibus esse veniam iusto ipsam maxime magnam quibusdam totam ad reprehenderit, nulla molestiae impedit nemo. Perferendis fuga iure exercitationem expedita assumenda ad eligendi maiores officia voluptatem harum praesentium veritatis sit odit, molestias ipsum, et aliquam ab rerum! Fugit quibusdam debitis, accusantium pariatur saepe nulla porro quisquam eos reiciendis libero veniam quam recusandae cum totam quaerat quos. Quidem eum cum eius quaerat assumenda voluptas, provident earum magnam similique natus, nobis fugiat? Nisi facilis quos sunt labore? Repellat quisquam nostrum consectetur obcaecati deleniti debitis adipisci facilis dolor iusto commodi, cum quaerat voluptate nam, id tempora amet temporibus molestiae, dignissimos qui ex necessitatibus incidunt ducimus nulla! Suscipit ipsa aliquid dolor magni autem quam atque esse quos dolorem in. Eveniet ullam, ipsum accusamus enim similique dignissimos? Magnam, exercitationem eum fugit modi expedita quo, commodi veniam accusantium in rem veritatis sequi illum laboriosam delectus dolores adipisci at! Ad harum hic aspernatur, dolores quis voluptates suscipit eaque. Id autem sequi aut ea quo minima nihil obcaecati, repellat placeat et adipisci iusto a nulla non? Facere velit similique inventore quibusdam voluptas rem fuga dolorem adipisci est tenetur! Qui corrupti possimus ex dolor fugiat animi est voluptatem obcaecati accusantium, voluptas veritatis enim quaerat quis nostrum beatae expedita magni debitis accusamus id quae suscipit consequatur dolorum? Odio harum dolorem temporibus ab porro, esse, natus fugit veritatis ipsam adipisci id fugiat corrupti suscipit laborum similique praesentium iste autem amet numquam velit! Veniam molestiae reiciendis minus aperiam eveniet sunt illum perferendis possimus rerum similique doloremque ea voluptate, ipsa provident, eligendi eos temporibus quae placeat beatae voluptatem tenetur dolorem hic, enim repellat? Dolores ex commodi ipsam fuga labore expedita architecto magnam! Perspiciatis ut unde numquam quis nesciunt illo perferendis voluptates ipsa, aspernatur voluptatem fuga consectetur fugiat eius accusantium mollitia. Porro ipsum dolorem saepe iusto provident repellendus. Sapiente eveniet error quos aspernatur maxime obcaecati accusamus porro, cupiditate, nam ex, expedita ut perferendis. Neque, quod minima voluptas ut dolorum obcaecati asperiores iusto doloremque sapiente sit suscipit quia minus in blanditiis mollitia esse impedit quis velit iure eaque, ea facilis saepe quae. Ea, molestias cupiditate, repudiandae voluptatibus excepturi illo neque voluptatem doloremque officiis inventore sapiente dolores, ratione in quibusdam odit eveniet? Molestiae autem iste beatae libero in sint quam esse ut ipsa commodi saepe laboriosam error ipsum voluptatem officia nihil, asperiores pariatur hic quis eligendi labore voluptatum quos rem ipsam. Animi deleniti nobis architecto molestias nulla, accusantium reiciendis ullam deserunt id porro vitae vero recusandae unde officiis consequuntur quibusdam rerum odit consequatur qui natus dolores. Nisi sed delectus sint exercitationem quas soluta laudantium at labore animi, dolorem temporibus obcaecati ullam corrupti magni qui nulla praesentium rerum, a doloremque officiis deserunt veritatis? Amet eos cupiditate facere tenetur cumque ullam quaerat vel officia enim, deleniti earum, nulla beatae quis sint ipsa minus? Accusamus, est iusto dolore natus totam alias aliquid harum? Sed impedit dolores minima, temporibus eum consequuntur perferendis ad nulla tempora numquam nostrum, maiores eveniet totam voluptatibus et nesciunt? Tempore nesciunt exercitationem beatae inventore molestias, maiores, laudantium illum reiciendis praesentium quod veniam ut modi? Quia beatae cumque cum accusamus architecto sequi consequatur aut libero corporis assumenda minus harum nulla soluta ab ullam debitis quos hic incidunt et iste, provident mollitia rerum? Expedita, amet. Molestiae vero at neque vel, enim beatae officia modi praesentium dolore optio et tempore veniam unde? Odio esse tempora voluptas quidem dolorum, alias, sit iusto quibusdam ut harum sunt sint sapiente tenetur nulla recusandae delectus deleniti inventore nemo, soluta eum aut voluptate! Quisquam ratione quis minus consequatur odio necessitatibus, molestiae veritatis dolor veniam cupiditate beatae dicta unde placeat praesentium nisi optio voluptatibus adipisci doloremque eius inventore? Nobis, neque saepe et corrupti explicabo soluta inventore nostrum perspiciatis voluptatem blanditiis iste eveniet, earum praesentium corporis. Harum obcaecati magnam veritatis tempore facere at voluptas necessitatibus, explicabo ratione iusto similique veniam quis voluptatibus delectus architecto eum nobis nostrum deleniti, doloribus ad, autem dignissimos qui. Dolorum laborum rem recusandae hic unde dicta maiores temporibus ipsam, voluptates mollitia officia sequi aliquid perspiciatis accusantium ut nostrum non? Ad odit repudiandae molestias eveniet! Quos, ab? Aspernatur beatae, non reprehenderit ab obcaecati, dignissimos itaque deserunt et in tenetur ipsa unde atque, voluptate hic odit nesciunt iste facere a quae! Exercitationem praesentium officiis voluptatum nobis quae dolore laborum, fugit ducimus sit labore itaque error! Soluta id nulla sequi harum, possimus eum, optio laboriosam, numquam consequatur sunt a? Ab nulla minus, qui optio accusantium quidem minima dolores enim officia provident laborum natus explicabo recusandae obcaecati vel aliquid ullam perferendis debitis numquam! Rerum temporibus harum velit sit architecto optio aspernatur. Corrupti cum iste laudantium provident sunt magnam dolore odio fugit quisquam, ipsam sequi officiis aliquid numquam qui commodi accusamus alias consequatur. Veritatis dolorem possimus sequi sunt repellat eveniet commodi consequatur non aperiam voluptatum, sit accusantium laudantium dicta delectus vitae reiciendis, esse sapiente eos. Autem exercitationem cum laborum sapiente nisi quis odit alias magnam libero, corrupti ratione totam et ex. Doloremque iure assumenda, libero dignissimos, aliquam aut dolore beatae, veniam ipsa incidunt at dolor tempora quae delectus alias illo distinctio molestiae?</p>
     </div>
 </body>
 </html>
