--- a/index.html
+++ b/index.html
@@ -70,6 +70,11 @@
   <a href="../personalwebpage/practicals/practical9.html">Practical-9</a>
 </li>
 </br>
+<li>
+  Create a Responsive Side-Bar Navigation Menu.
+  <a href="../personalwebpage/practicals/practical10.html">Practical-10</a>
+</li>
+</br>
     </ol>
   </body>
 </html>
