--- a/practicals/practical11.html
+++ b/practicals/practical11.html
@@ -121,7 +121,7 @@
         <tr>
             <td>1</td>
             <td>Create a Web Page including HTML basic skeleton using offline HTML Editor and online Sandbox Environment</td>
-            <td><a href="Practical1.html" target="_blank">Practical-1</a></td>
+            <td><a href="../practicals/practical1.html" target="_blank">Practical-1</a></td>
             <td id="status">Checked</td>
             <td>
                 <i class="fa fa-pencil" aria-hidden="true" title="Edit"></i>
@@ -131,7 +131,7 @@
         <tr>
             <td>2</td>
             <td>Live your first Web-page on GitHub</td>
-            <td><a href="Practical2.html" target="_blank">Practical-2</a></td>
+            <td><a href="../practicals/practical2.html" target="_blank">Practical-2</a></td>
             <td id="status">Checked</td>
             <td>
                 <i class="fa fa-pencil" title="Edit"></i>
@@ -141,7 +141,7 @@
         <tr>
             <td>3</td>
             <td>Create a Web Page showing a HTML basic structure using Character Entities and Span tag</td>
-            <td><a href="Practical3.html" target="_blank">Practical-3</a></td>
+            <td><a href="../practicals/practical3.html" target="_blank">Practical-3</a></td>
             <td id="status">Checked</td>
             <td>
                 <i class="fa fa-pencil" title="Edit"></i>
@@ -151,7 +151,7 @@
         <tr>
             <td>4</td>
             <td>Create a website having a list of all practicals and their individual practical page links</td>
-            <td><a href="Practical4.html" target="_blank">Practical-4</a></td>
+            <td><a href="../practicals/practical4.html" target="_blank">Practical-4</a></td>
             <td id="status">Checked</td>
             <td>
                 <i class="fa fa-pencil" title="Edit"></i>
@@ -161,7 +161,7 @@
         <tr>
             <td>5</td>
             <td>Create a web page showing the use of Image Map in the Web Application</td>
-            <td><a href="Practical5.html" target="_blank">Practical-5</a></td>
+            <td><a href="../practicals/practical5.html" target="_blank">Practical-5</a></td>
             <td id="status">Checked</td>
             <td>
                 <i class="fa fa-pencil" title="Edit"></i>
@@ -171,7 +171,7 @@
         <tr>
             <td>6</td>
             <td>Create a Card Layout using CSS Layout properties</td>
-            <td><a href="Practical6.html" target="_blank">Practical-6</a></td>
+            <td><a href="../practicals/practical6.html" target="_blank">Practical-6</a></td>
             <td id="status">Checked</td>
             <td>
                 <i class="fa fa-pencil" title="Edit"></i>
@@ -181,7 +181,7 @@
         <tr>
             <td>7</td>
             <td>Create a web page layout using div tags</td>
-            <td><a href="Practical7.html" target="_blank">Practical-7</a></td>
+            <td><a href="../practicals/practical7.html" target="_blank">Practical-7</a></td>
             <td id="status">Checked</td>
             <td>
                 <i class="fa fa-pencil" title="Edit"></i>
@@ -191,7 +191,7 @@
         <tr>
             <td>8</td>
             <td>Create a web page having Fixed Navigation Bar with the given content</td>
-            <td><a href="Practical8.html" target="_blank">Practical-8</a></td>
+            <td><a href="../practicals/practical8.html" target="_blank">Practical-8</a></td>
             <td id="status">Checked</td>
             <td>
                 <i class="fa fa-pencil" title="Edit"></i>
@@ -201,7 +201,7 @@
         <tr>
             <td>9</td>
             <td>Create a Responsive Web Page layout with Responsive Navigation Bar</td>
-            <td><a href="Practical9.html" target="_blank">Practical-9</a></td>
+            <td><a href="../practicals/practical9.html" target="_blank">Practical-9</a></td>
             <td id="stat">Un-Checked</td>
             <td>
                 <i class="fa fa-pencil" title="Edit"></i>
@@ -211,7 +211,7 @@
         <tr>
             <td>10</td>
             <td>Create a Responsive Side-Bar Navigation Menu</td>
-            <td><a href="Practical10.html" target="_blank">Practical-10</a></td>
+            <td><a href="../practicals/practical10.html" target="_blank">Practical-10</a></td>
             <td id="stat">Un-Checked</td>
             <td>
                 <i class="fa fa-pencil" title="Edit"></i>
