--- a/practicals/practical12.html
+++ b/practicals/practical12.html
@@ -160,28 +160,28 @@
                     <td>included</td>
                 </tr>
                 <tr>
-                    <td><img src="../img/check.png" alt="tick"></td>
-                    <td><img src="../img/check.png" alt="tick"></td>
-                    <td><img src="../img/check.png" alt="tick"></td>
-                    <td><img src="../img/check.png" alt="tick"></td>
+                    <td><img src="../images/check.png" alt="tick"></td>
+                    <td><img src="../images/check.png" alt="tick"></td>
+                    <td><img src="../images/check.png" alt="tick"></td>
+                    <td><img src="../images/check.png" alt="tick"></td>
                 </tr>
                 <tr>
-                    <td><img src="../img/cancel.png" alt="tick"></td>
-                    <td><img src="../img/check.png" alt="tick"></td>
-                    <td><img src="../img/check.png" alt="tick"></td>
-                    <td><img src="../img/check.png" alt="tick"></td>
+                    <td><img src="../images/cancel.png" alt="tick"></td>
+                    <td><img src="../images/check.png" alt="tick"></td>
+                    <td><img src="../images/check.png" alt="tick"></td>
+                    <td><img src="../images/check.png" alt="tick"></td>
                 </tr>
                 <tr>
-                    <td><img src="../img/cancel.png" alt="tick"></td>
-                    <td><img src="../img/cancel.png" alt="tick"></td>
-                    <td><img src="../img/check.png" alt="tick"></td>
-                    <td><img src="../img/check.png" alt="tick"></td>
+                    <td><img src="../images/cancel.png" alt="tick"></td>
+                    <td><img src="../images/cancel.png" alt="tick"></td>
+                    <td><img src="../images/check.png" alt="tick"></td>
+                    <td><img src="../images/check.png" alt="tick"></td>
                 </tr>
                 <tr>
-                    <td><img src="../img/cancel.png" alt="tick"></td>
-                    <td><img src="../img/cancel.png" alt="tick"></td>
-                    <td><img src="../img/cancel.png" alt="tick"></td>
-                    <td><img src="../img/check.png" alt="tick"></td>
+                    <td><img src="../images/cancel.png" alt="tick"></td>
+                    <td><img src="../images/cancel.png" alt="tick"></td>
+                    <td><img src="../images/cancel.png" alt="tick"></td>
+                    <td><img src="../images/check.png" alt="tick"></td>
                 </tr>
             </tbody>
             <tfoot>
