--- a/index.html
+++ b/index.html
@@ -75,6 +75,16 @@
   <a href="../personalwebpage/practicals/practical10.html">Practical-10</a>
 </li>
 </br>
+<li>
+  Create a table that represent Live Practical Book Records. 
+  <a href="../personalwebpage/practicals/practical11.html">Practical-11</a>
+</li>
+</br>
+<li>
+  Create a Custom Price Table Template.
+  <a href="../personalwebpage/practicals/practical12.html">Practical-12</a>
+</li>
+</br>
     </ol>
   </body>
 </html>
