--- a/practicals/practical13.html
+++ b/practicals/practical13.html
@@ -350,7 +350,7 @@ hr {
         position: absolute;
         right: 0;
         bottom: -10px;
-        background-color: orange;
+        background-color: rgb(51, 26, 161);
         transition: all 0.3s;
     }
     
@@ -542,7 +542,7 @@ hr {
         position: absolute;
         right: 0;
         bottom: -10px;
-        background-color: orange;
+        background-color: rgb(44, 41, 223);
         transition: all 0.3s;
     }
     
@@ -588,7 +588,7 @@ hr {
             <section class="sub-sec4">
                 <h3>CONTACT</h3>
                 <ul>
-                    <li><i class="fa fa-home"></i><span>SCO-75, Chandigarh, India</span></li>
+                    <li><i class="fa fa-home"></i><span>Sector 78, Noida, India</span></li>
                     <li><i class="fa fa-envelope"></i><span>betalabsindia@gmail.com</span></li>
                     <li><i class="fa fa-phone-square"></i><span>Mobile: 0972980731</span></li>
                     <li><i class="fa fa-facebook-official"></i><a href="#">betalabsindia</a></li>
