--- a/index.html
+++ b/index.html
@@ -85,6 +85,11 @@
   <a href="../personalwebpage/practicals/practical12.html">Practical-12</a>
 </li>
 </br>
+<li>
+  Create a Responsive footer Template.
+  <a href="../personalwebpage/practicals/practical13.html">Practical-13</a>
+</li>
+</br>
     </ol>
   </body>
 </html>
