--- a/practicals/practical14.html
+++ b/practicals/practical14.html
@@ -324,8 +324,7 @@
                     </div>
                     <input type="checkbox" name="chk" id="chk">
                     <p>Accept the
-                        <b>
-                            Terms and Conditions</b>
+                        <a href="#">terms and conditions..</a>
                     </p>
                     <input type="submit" value="SIGNUP">
                     <p id="p3">Have an account?
