--- a/practicals/practical14.html
+++ b/practicals/practical14.html
@@ -31,6 +31,7 @@
                 flex-direction: row;
                 flex-wrap: wrap;
                 justify-content: center;
+                box-shadow: #778899;
             }
             .form-template1 {
                 width: 300px;
