--- a/index.html
+++ b/index.html
@@ -1,100 +1,107 @@
-  
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Practicals</title>
-    <link rel="stylesheet" href="../personalwebpage/css/index.css">
-  </head>
-  <body>
-    <h1>Welcome to Fullstack Course</h1>
-    <h2>About Course</h2>
-    <p>
-      Front-end web development, also known as client-side development is the
-      practice of producing HTML, CSS and JavaScript for a website or Web
-      Application so that a user can see and interact with them directly. The
-      challenge associated with front end development is that the tools and
-      techniques used to create the front end of a website change constantly and
-      so the developer needs to constantly be aware of how the field is
-      developing.
-    </p>
-    <h1>List of Practicals</h1>
-    <ol>
-      <li>
-        Create a Web page including HTML basic skeleton using Offline HTML
-        Editor and Online Sandbox Environment
-        <a href="../personalwebpage/practicals/practical1.html">Practical-1</a>
-      </li>
-      
-      <br />
-      <li>
-        Live your First Web-Page on Git-Hub
-        <a href="../personalwebpage/practicals/practical2.html">Practical-2</a>
-      </li>
-      <br />
-      <li>
-        Create a web page showing a basic html structure using character
-        Entities and span Tag.
-        <a href="../personalwebpage/practicals/practical3.html">Practical-3</a>
-      </li>
-      <br />
-      <li>
-        Create a website having list of all practical and their individual
-        practical Page links .
-        <a href='../personalwebpage/practicals/practical4.html'>Practical-4</a>
-      </li>
-      <br />
-      <li>
-        Create a Web-Page showing the use of Image-Map in the Web Application.
-        <a href='../personalwebpage/practicals/practical5.html'>Practical-5</a>
-      </li>
-    </br>
-      <li>
-        Create following layout using CSS Layout properties.
-        <a href="../personalwebpage/practicals/practical6.html">Practical-6</a>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Practicals</title>
+  <link rel="stylesheet" href="../personalwebpage/css/index.css">
+</head>
+
+<body>
+  <h1>Welcome to Fullstack Course</h1>
+  <h2>About Course</h2>
+  <p>
+    Front-end web development, also known as client-side development is the
+    practice of producing HTML, CSS and JavaScript for a website or Web
+    Application so that a user can see and interact with them directly. The
+    challenge associated with front end development is that the tools and
+    techniques used to create the front end of a website change constantly and
+    so the developer needs to constantly be aware of how the field is
+    developing.
+  </p>
+  <h1>List of Practicals</h1>
+  <ol>
+    <li>
+      Create a Web page including HTML basic skeleton using Offline HTML
+      Editor and Online Sandbox Environment
+      <a href="../personalwebpage/practicals/practical1.html">Practical-1</a>
     </li>
-  </br>
-  <li>
-    Create a Web Page Layout using div tags.
-    <a href="../personalwebpage/practicals/practical7.html">Practical-7</a>
-  </li>
-</br>
-<li>
-  Create a Web Page having Fixed Navigation Bar with the given content.
-  <a href="../personalwebpage/practicals/practical8.html">Practical-8</a>
-</li>
-</br>
-<li>
-  Create a Responsive Web Layout with Responsive Navigation Bar.
-  <a href="../personalwebpage/practicals/practical9.html">Practical-9</a>
-</li>
-</br>
-<li>
-  Create a Responsive Side-Bar Navigation Menu.
-  <a href="../personalwebpage/practicals/practical10.html">Practical-10</a>
-</li>
-</br>
-<li>
-  Create a table that represent Live Practical Book Records. 
-  <a href="../personalwebpage/practicals/practical11.html">Practical-11</a>
-</li>
-</br>
-<li>
-  Create a Custom Price Table Template.
-  <a href="../personalwebpage/practicals/practical12.html">Practical-12</a>
-</li>
-</br>
-<li>
-  Create a Responsive footer Template.
-  <a href="../personalwebpage/practicals/practical13.html">Practical-13</a>
-</li>
-</br>
-<li>
-  Create Login Form with different Templates.
-  <a href="../personalwebpage/practicals/practical14.html">Practical-14</a>
-</li>
-</br>
-    </ol>
-  </body>
+
+    <br />
+    <li>
+      Live your First Web-Page on Git-Hub
+      <a href="../personalwebpage/practicals/practical2.html">Practical-2</a>
+    </li>
+    <br />
+    <li>
+      Create a web page showing a basic html structure using character
+      Entities and span Tag.
+      <a href="../personalwebpage/practicals/practical3.html">Practical-3</a>
+    </li>
+    <br />
+    <li>
+      Create a website having list of all practical and their individual
+      practical Page links .
+      <a href='../personalwebpage/practicals/practical4.html'>Practical-4</a>
+    </li>
+    <br />
+    <li>
+      Create a Web-Page showing the use of Image-Map in the Web Application.
+      <a href='../personalwebpage/practicals/practical5.html'>Practical-5</a>
+    </li>
+    </br>
+    <li>
+      Create following layout using CSS Layout properties.
+      <a href="../personalwebpage/practicals/practical6.html">Practical-6</a>
+    </li>
+    </br>
+    <li>
+      Create a Web Page Layout using div tags.
+      <a href="../personalwebpage/practicals/practical7.html">Practical-7</a>
+    </li>
+    </br>
+    <li>
+      Create a Web Page having Fixed Navigation Bar with the given content.
+      <a href="../personalwebpage/practicals/practical8.html">Practical-8</a>
+    </li>
+    </br>
+    <li>
+      Create a Responsive Web Layout with Responsive Navigation Bar.
+      <a href="../personalwebpage/practicals/practical9.html">Practical-9</a>
+    </li>
+    </br>
+    <li>
+      Create a Responsive Side-Bar Navigation Menu.
+      <a href="../personalwebpage/practicals/practical10.html">Practical-10</a>
+    </li>
+    </br>
+    <li>
+      Create a table that represent Live Practical Book Records.
+      <a href="../personalwebpage/practicals/practical11.html">Practical-11</a>
+    </li>
+    </br>
+    <li>
+      Create a Custom Price Table Template.
+      <a href="../personalwebpage/practicals/practical12.html">Practical-12</a>
+    </li>
+    </br>
+    <li>
+      Create a Responsive footer Template.
+      <a href="../personalwebpage/practicals/practical13.html">Practical-13</a>
+    </li>
+    </br>
+    <li>
+      Create Login Form with different Templates.
+      <a href="../personalwebpage/practicals/practical14.html">Practical-14</a>
+    </li>
+    </br>
+    <li>
+      Create a Counter Page using JavaScript as per the attached Templates.
+      <a href="../personalwebpage/practicals/practical-15.html">Practical-15</a>
+    </li>
+    </br>
+  </ol>
+</body>
+
 </html>
