--- a/practicals/practical16.html
+++ b/practicals/practical16.html
@@ -22,7 +22,7 @@
             <!-- Added dynamically -->
         </ul>
     </div>
-    <script src="JavaScript/Prac-16.js"></script>
+    <script src="../practicals/JavaScript/practical16.js"></script>
 </body>
 
 </html>
