--- a/practicals/practical17.html
+++ b/practicals/practical17.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Live Clock Greeting</title>
-    <link rel="stylesheet" href="CSS/Prac-17.css">
+    <link rel="stylesheet" href="../css/practical17.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@500&display=swap" rel="stylesheet">
 </head>
@@ -15,7 +15,7 @@
     <h1 id="greeting"></h1>
     <h2 id="name" contenteditable="true"></h2>
     <h1 id="day"></h1>
-    <script src="JavaScript/Prac-17.js"></script>
+    <script src="../practicals/JavaScript/practical17.js"></script>
 </body>
 
 </html>
