--- a/index.html
+++ b/index.html
@@ -98,6 +98,11 @@
             <a href="../personalwebpage/practicals/practical16.html">Practical-15</a>
         </li>
         </br>
+        <li>
+            Create a Page with Live Clock with Dynamic Greeting Background and Data Stored in Browser Local Storage
+            <a href="../personalwebpage/practicals/practical17.html">Practical17</a>
+        </li>
+        </br>
     </ol>
 </body>
 
