--- a/practicals/practical18.html
+++ b/practicals/practical18.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Form Validation</title>
-    <link rel="stylesheet" href="CSS/Prac-18.css">
+    <link rel="stylesheet" href="../css/practical18.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
 </head>
 
@@ -51,7 +51,7 @@
 
         </form>
     </div>
-    <script src="JavaScript/Prac-18.js"></script>
+    <script src="../practicals/JavaScript/practical18.js"></script>
 </body>
 
 </html>
