--- a/index.html
+++ b/index.html
@@ -103,6 +103,11 @@
             <a href="../personalwebpage/practicals/practical17.html">Practical17</a>
         </li>
         </br>
+        <li>
+            Create an HTML Form and Validate it with Javascript (Client-side Programming Language)
+            <a href="../personalwebpage/practicals/practical18.html">Practical18</a>
+        </li>
+        </br>
     </ol>
 </body>
 
