--- a/index.html
+++ b/index.html
@@ -108,6 +108,16 @@
             <a href="../personalwebpage/practicals/practical18.html">Practical18</a>
         </li>
         </br>
+        <li>
+            Create an HTML page with Multi-Step Form.
+            <a href="../personalwebpage/practicals/practical19.html">Practical19</a>
+        </li>
+        </br>
+        <li>
+            Create a Responsive Layout using Bootstrap Grid System.
+            <a href="../personalwebpage/practicals/practical20.html">Practical20</a>
+        </li>
+        </br>
     </ol>
 </body>
 
