--- a/practicals/practical19.html
+++ b/practicals/practical19.html
@@ -49,7 +49,7 @@
 
         </div>
     </div>
-    <script src="../js/practical19.js"></script>
+    <script src="../practicals/JavaScript/practical19.js"></script>
 </body>
 
 </html>
